fix click not working

--- a/ogapp/templates/main-service.html
+++ b/ogapp/templates/main-service.html
@@ -42,6 +42,7 @@
                         </li>
                         <li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
                         <li><a class="nav-link active" href="{% url 'service' %}">Services</a></li>
+								<li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
                         <li><a class="nav-link" href="/">About us</a></li>
                     </ul>
                 </div>
