--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -53,6 +53,7 @@
 					</li>
 					<li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
 					<li><a class="nav-link" href="{% url 'service' %}">Services</a></li>
+					<li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
 					<li><a class="nav-link" href="/">About us</a></li>
 				</ul>
 			</div>
@@ -927,7 +928,7 @@
 							<ul class="list-unstyled d-inline-flex ms-auto">
 								<li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
 								<li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-								<li><a class="nav-link" href="service/FAQ">FAQ</a></li>
+								<li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
 
 							</ul>
 
