fix all the changes

--- a/ogapp/templates/main-service.html
+++ b/ogapp/templates/main-service.html
@@ -79,7 +79,7 @@
                     <div class="col-lg-5">
                         <div class="intro-excerpt">
                             <h1>Best removalist in Adelaide<span clsas="d-block"></span></h1>
-                            <p class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
+                            <p style="color: #fff;" class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
                             <p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a
                                     target="_blank" href="tel:+61434653406" class="btn btn-white-outline">Call Us
                                     Now</a></p>
