fixed all gliches and bugs

--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -360,7 +360,7 @@
 					}
 				</style>
 				<div id="dlr">
-					<h1 id="mainh1">Winter sale Extra</h1>
+					<h1 id="mainh1">Winter sale Limited time offer</h1><br>
 					<img class="responsive-imagess imgg" src="{% static 'images/dollor.png' %}" alt="">
 				</div>
 
