--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -472,8 +472,8 @@
 						<li><b>Customer Centric Excellence </b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 						<li><b>Reliability and Trust </b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 					</ul>
+					<a href="{% url 'service' %}" class="btn">Explore</a>
 
-					<p><a herf="{% url 'service' %}" class="btn">Explore</a></p>
 				</div>
 			</div>
 		</div>
