--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -252,7 +252,7 @@
 								<strong>$99 </strong><span>per hour</span>
 							</div>
 							<div class="service-body">
-								<p>Suitable for 1-2 bedroom<br> apartment </p>
+								<p>Suitable for 1-2 bedroom</p>
 								<p>4.5 Ton truck</p>
 								<p>2X Movers</p>
 								<p>Fully Insured</p>
