--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -953,7 +953,7 @@
 
 						<ul class="list-unstyled custom-social">
 							<h3 class="h3">Follow us on</h3>
-							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span class="fa fa-brands fa-facebook-f"></span></a></li>
 							<li><a href="https://www.tiktok.com/@og.movers?_t=8oDKu8nNwut&_r=1"><span
 										class="fa fa-brands fa-tiktok"></i></span></a></li>
 							<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
@@ -966,7 +966,7 @@
 						<div class="row links-wrap">
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
+									<li><a href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
 									<li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
 									<li><a href="{% url 'contact' %}">Contact us</a></li>
 									<li><iframe
