--- a/ogapp/templates/main-service.html
+++ b/ogapp/templates/main-service.html
@@ -123,7 +123,7 @@
                             needs. Trust OG Movers to deliver quality service and peace of mind for your next move..</p>
 
                         <ul class="list-unstyled custom-social">
-                            <li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                             <li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
                             <li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
                                         class="fa fa-brands fa-instagram"></span></a></li>
@@ -135,7 +135,7 @@
                         <div class="row links-wrap">
                             <div class="col-6 col-sm-6 col-md-3">
                                 <ul class="list-unstyled">
-                                    <li><a href="#">About us</a></li>
+                                    <li><a href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
                                     <li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
                                     <li><a href="{% url 'contact' %}">Contact us</a></li>
                                     <li><iframe
