--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -19,6 +19,14 @@
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 	<title>OG Movers and Packers</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q0BB445WZ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-5Q0BB445WZ');
+	</script>
 </head>
 
 <body>
@@ -778,36 +786,35 @@
 		.carousel-control-next-icon {
 			transform: translateY(-50%);
 		}
-
 	</style>
-		<div class="container mt-5">
-			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active" data-bs-interval="000">
-						<img src="{% static 'images/cross1.png'%}" class="d-block w-100" alt="Slide 1">
-					</div>
-					<div class="carousel-item" data-bs-interval="2000">
-						<img src="{% static 'images/cross2.png'%}" class="d-block w-100" alt="Slide 2">
-					</div>
-					<div class="carousel-item" data-bs-interval="2000">
-						<img src="{% static 'images/cross3.png'%}" class="d-block w-100" alt="Slide 3">
-					</div>
-					<div class="carousel-item" data-bs-interval="2000">
-						<img src="{% static 'images/cross4.png'%}" class="d-block w-100" alt="Slide 4">
-					</div>
+	<div class="container mt-5">
+		<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active" data-bs-interval="000">
+					<img src="{% static 'images/cross1.png'%}" class="d-block w-100" alt="Slide 1">
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-					data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-					data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
+				<div class="carousel-item" data-bs-interval="2000">
+					<img src="{% static 'images/cross2.png'%}" class="d-block w-100" alt="Slide 2">
+				</div>
+				<div class="carousel-item" data-bs-interval="2000">
+					<img src="{% static 'images/cross3.png'%}" class="d-block w-100" alt="Slide 3">
+				</div>
+				<div class="carousel-item" data-bs-interval="2000">
+					<img src="{% static 'images/cross4.png'%}" class="d-block w-100" alt="Slide 4">
+				</div>
 			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
+	</div>
 	</div>
 
 	<!-- Start Blog Section -->
@@ -953,7 +960,8 @@
 
 						<ul class="list-unstyled custom-social">
 							<h3 class="h3">Follow us on</h3>
-							<li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span
+										class="fa fa-brands fa-facebook-f"></span></a></li>
 							<li><a href="https://www.tiktok.com/@og.movers?_t=8oDKu8nNwut&_r=1"><span
 										class="fa fa-brands fa-tiktok"></i></span></a></li>
 							<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
