--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -9,10 +9,6 @@
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
-
-
-
-
   <!-- Bootstrap CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +17,16 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>OG Movers and Packers</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16485596543');
+</script>
+
 </head>
 
 <body>
