--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -27,6 +27,21 @@
 
 		gtag('config', 'G-5Q0BB445WZ');
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16485596543');
+</script>
+<!-- Event snippet for Submit lead form conversion page -->
+<script>
+	gtag('event', 'conversion', {'send_to': 'AW-16485596543/An2RCNy94JkZEP_6-LQ9'});
+  </script>
+  
+
 </head>
 
 <body>
@@ -229,7 +244,6 @@
 		</div>
 		<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 		<div class="elfsight-app-eafe7237-0678-49ca-87f8-e17291ab2477" data-elfsight-app-lazy></div>
-
 
 	</div>
 	</div>
