--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -28,19 +28,30 @@
 		gtag('config', 'G-5Q0BB445WZ');
 	</script>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'AW-16485596543');
-</script>
-<!-- Event snippet for Submit lead form conversion page -->
-<script>
-	gtag('event', 'conversion', {'send_to': 'AW-16485596543/An2RCNy94JkZEP_6-LQ9'});
-  </script>
-  
+		gtag('config', 'AW-16485596543');
+	</script>
+	<!-- Event snippet for Submit lead form conversion page -->
+	<script>
+		gtag('event', 'conversion', { 'send_to': 'AW-16485596543/An2RCNy94JkZEP_6-LQ9' });
+	</script>
+	<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+			h._hjSettings = { hjid: 5092808, hjsv: 6 };
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script'); r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
+
 
 </head>
 
@@ -243,8 +254,7 @@
 
 		</div>
 		<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-		<div class="elfsight-app-eafe7237-0678-49ca-87f8-e17291ab2477" data-elfsight-app-lazy></div>
-
+		<div class="elfsight-app-3133f632-949f-42af-9842-9530d3b1e34f" data-elfsight-app-lazy></div>
 	</div>
 	</div>
 	<div class="product-section">
