--- a/ogapp/templates/privacy.html
+++ b/ogapp/templates/privacy.html
@@ -17,6 +17,17 @@
 
   gtag('config', 'AW-16485596543');
 </script>
+<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5092808,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 
 
