fix added new line

--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -143,7 +143,7 @@
                   <div class="form-group">
                     <label class="text-black" for="fname">Price</label>
                     <select class="form-select" name="price" aria-label="Default select example" required>
-                      <option value="1001">One Bedroom</option>
+                      <option value="1001">One Bedroom Limited time offer 49$/HH</option>
                       <option value="1002">Two Bedrooms</option>
                       <option value="1003">Three Bedrooms</option>
                       <option value="1004">Four Bedrooms +</option>
