--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -51,9 +51,7 @@
 			a.appendChild(r);
 		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
 	</script>
-	<meta name="trustpilot-one-time-domain-verification-id" content="343f0652-5e28-43f2-99c8-30f6dd5cf52d"/>
-
-
+	<meta name="trustpilot-one-time-domain-verification-id" content="343f0652-5e28-43f2-99c8-30f6dd5cf52d" />
 </head>
 
 <body>
@@ -216,7 +214,7 @@
 											<label class="text-black" for="fname">Price</label>
 											<select class="form-select" name="price" aria-label="Default select example"
 												required>
-												<option value="1001">One Bedroom</option>
+												<option value="1001">One Bedroom Limited time offer 49$/HH</option>
 												<option value="1002">Two Bedrooms</option>
 												<option value="1003">Three Bedrooms</option>
 												<option value="1004">Four Bedrooms +</option>
