--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -18,40 +18,50 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>OG Movers and Packers</title>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'AW-16485596543');
-</script>
-<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:5092808,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+    gtag('config', 'AW-16485596543');
+  </script>
+  <!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 5092808, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
       a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
 
 </head>
 
 <body>
-
-
-  <!-- Start Contact Form -->
+    <!-- Start Contact Form -->
+  <style>
+    .untree_co-section {
+      padding: 1rem 0;
+    }
+  </style>
   <div class="untree_co-section">
     <div class="container">
-
       <div class="block">
         <div class="row justify-content-center">
-
-
           <div class="col-md-8 col-lg-8 pb-4">
+            <div class="row justify-content-center">
+              <h1>Limited Time Offer: Premium Removal Services</h1>
+              <p>Ready for a hassle-free move? This season, grab our unbeatable deal: professional home
+                removals for just <b>$49!</b> Whether you're relocating to a new house or just need to shift things
+                around, our expert team ensures a smooth and efficient process, without breaking the bank.
+                With top-notch service and unbeatable value, this limited-time offer guarantees your move
+                will be stress-free and budget-friendly. Don’t miss out—book now and experience top-quality
+                moving services at an incredible price. Move smart, save big, and enjoy your new space with
+                ease!</p>
+            </div>
 
 
             <div class="row mb-5">
@@ -190,17 +200,17 @@
     <ul class="list-unstyled d-inline-flex ms-auto">
       <li class="me-4"><a href="{% url 'terms' %}">Terms & Conditions</a></li>
       <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
-      
+
     </ul>
   </footer>
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'AW-16485596543');
-</script>
+    gtag('config', 'AW-16485596543');
+  </script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
