--- a/ogapp/templates/main-service.html
+++ b/ogapp/templates/main-service.html
@@ -49,7 +49,8 @@
         <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark"
             arial-label="Furni navigation bar">
             <div class="container">
-                <a class="navbar-brand" href="/">OG Movers<span>.</span></a>
+                <a href="/"><img class="navbar-brand" style="height: 60px; border-radius: 60px;" id="logo" src="{% static 'logo.png' %}"></a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
                     aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
