--- a/ogapp/templates/service.html
+++ b/ogapp/templates/service.html
@@ -19,25 +19,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>OG Movers and Packers</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-16485596543');
-</script>
-<!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:5092808,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+        gtag('config', 'AW-16485596543');
+    </script>
+    <!-- Hotjar Tracking Code for Site 5092808 (name missing) -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 5092808, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 
 </head>
 
@@ -46,24 +46,26 @@
     <!-- Start Header/Navigation -->
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
         <div class="container">
-            <a class="navbar-brand" href="/">OG Movers<span>.</span></a>
+            <a href="/"><img class="navbar-brand" style="height: 60px; border-radius: 60px;" id="logo"
+                    src="{% static 'logo.png' %}"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
                 aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarsFurni">
-                <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-                    <li><a class="nav-link btn" target="_blank" href="tel:+61434653406">+61 434 653 406</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
-                    <li><a class="nav-link active" href="{% url 'service' %}">Services</a></li>
-                    <li><a class="nav-link" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
-                    <li><a class="nav-link" href="/">About us</a></li>
-                </ul>
-            </div>
+				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+					<li><a class="nav-link btn" target="_blank" href="tel:+61434653406">+61 434 653 406</a></li>
+					<li>
+						<a class="btn btn-warning" href="/">Home</a>
+					</li>
+					<li><a class="btn btn-warning" href="{% url 'contact' %}">Contact us</a></li>
+					<li><a class="btn btn-warning" href="{% url 'service' %}">Services</a></li>
+					<li><a class="btn btn-warning" href=" {% url 'iservice' 'FAQ' %} ">FAQ</a></li>
+					<li><a class="btn btn-warning" href="{% url 'iservice' 'ABOUT' %}">About us</a></li>
+				</ul>
+			</div>
+		</div>
         </div>
     </nav>
     </a>
@@ -99,10 +101,11 @@
                 <div class="row justify-content-between">
                     <div class="col-lg-5">
                         <div class="intro-excerpt">
-                            <h1>Best removalist in Adelaide<span clsas="d-block"></span></h1>
-                            <p style="color: #fff;" class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
+                            <h1 style="color: #000000;">Best removalist in Adelaide<span clsas="d-block"></span></h1>
+                            <p style="color: #000000;" class="mb-4">For all of your relocation needs in Adelaide, we
+                                have you covered.!</p>
                             <p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a
-                                    target="_blank" href="tel:+61434653406" class="btn btn-white-outline">Call Us
+                                    target="_blank" href="tel:+61434653406" class="btn btn-secondary">Call Us
                                     Now</a></p>
                         </div>
                     </div>
@@ -167,7 +170,8 @@
                                 deliver
                                 moving experience that exceeds your expectations..
                                 reliable, professional service that keeps your business moving forward..</p><a
-                                class="btn btn-dark-outline" href="{% url 'iservice' 'Service-Commercial-Moving' %}">Read More</a>
+                                class="btn btn-dark-outline"
+                                href="{% url 'iservice' 'Service-Commercial-Moving' %}">Read More</a>
                         </div>
                         <div class="service-description">
                             <div class="service-header">3. Packing Services</div>
@@ -186,7 +190,8 @@
                                 handle every aspect of packing with care and efficiency. Choose OG Movers for
                                 moving experience that exceeds your expectations..
                                 comprehensive packing solutions that give you peace of mind during your move..</p><a
-                                class="btn btn-dark-outline" href="{% url 'iservice' 'Service-Packing-Services'%}">Read More</a>
+                                class="btn btn-dark-outline" href="{% url 'iservice' 'Service-Packing-Services'%}">Read
+                                More</a>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -290,7 +295,8 @@
 
                     <ul class="list-unstyled custom-social">
                         <h3 class="h3">Follow us on</h3>
-                        <li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61557985231099"><span
+                                    class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://www.tiktok.com/@og.movers?_t=8oDKu8nNwut&_r=1"><span
                                     class="fa fa-brands fa-tiktok"></i></span></a></li>
                         <li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span
